--- a/src/app/style/base.scss
+++ b/src/app/style/base.scss
@@ -12,10 +12,11 @@ body {
 }
 
 .container {
-    padding: 25px calc((100vw - 960px) / 2);
+    padding: 5vw;
 
     @media (max-width: 980px) {
-        padding: 25px 10px;
+        padding: 3vw;
+        
     }
 }
 
@@ -78,3 +79,24 @@ body {
     margin: 0 !important;
   }
   
+
+  @media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+   }
+}
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+   }
+}
+@media (min-width: 992px) {
+    .card-columns {
+        column-count: 4;
+   }
+}
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 5;
+   }
+}
