--- a/src/app/style/components.scss
+++ b/src/app/style/components.scss
@@ -62,3 +62,9 @@
         color: lighten($primary-color, 8%);
     }
 }
+
+.news-card {
+    border: 1px solid gray;
+    border-radius: 3px;
+    outline: none;
+}
