feature: added update, create posts, added simple pagination

--- a/src/app/js/components/Blog/index.scss
+++ b/src/app/js/components/Blog/index.scss
@@ -13,4 +13,10 @@
   &__empty {
     flex-grow: 1;
   }
+
+  &__pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
