--- a/src/app/js/components/Blog/NewsCard/NewsCard.scss
+++ b/src/app/js/components/Blog/NewsCard/NewsCard.scss
@@ -1,5 +1,14 @@
-.news-card {
-  border: 1px solid gray;
+.news-card-preview {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  padding: 5px;
+  border: 1px solid rgba(0,0,0,.125);
   border-radius: 3px;
   outline: none;
+}
+
+.news-card-header {
+  display: flex;
+  justify-content: space-between;
 }
