added post page

--- a/src/app/js/components/Blog/NewsCard/NewsCard.scss
+++ b/src/app/js/components/Blog/NewsCard/NewsCard.scss
@@ -1,14 +1,21 @@
-.news-card-preview {
-  display: flex;
-  align-items: center;
-  height: 50px;
-  padding: 5px;
-  border: 1px solid rgba(0,0,0,.125);
-  border-radius: 3px;
-  outline: none;
-}
+.news-card {
+  &:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+  }
 
-.news-card-header {
-  display: flex;
-  justify-content: space-between;
+  &__preview {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    padding: 5px;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 3px;
+    outline: none;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+  }
 }
