--- a/src/app/js/components/Blog/index.scss
+++ b/src/app/js/components/Blog/index.scss
@@ -18,5 +18,81 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
+
+    .pagination-btn {
+      margin: 0 2px;
+      list-style: none;
+      width: 22px;
+      height: 22px;
+      border-radius: 3px;
+      background-color: #2785ff;
+      color: #fff;
+
+      a {
+        width: inherit;
+        height: inherit;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        outline: none;
+      }
+
+      &:hover {
+        background-color: #175d81;
+        cursor: pointer;
+      }
+    }
+
+    .pagination-active-btn {
+      background-color: #175d81;
+      cursor: pointer;
+    }
+
+    .pagination-arrow-btn {
+      position: relative;
+      width: 22px;
+      height: 22px;
+      list-style: none;
+
+      &:hover {
+        color: #175d81;
+        cursor: pointer;
+      }
+
+      a {
+        width: inherit;
+        height: inherit;
+        visibility: hidden;
+      }
+    }
+
+    .pagination-prev-btn {
+      &:after {
+        content: "<<";
+        position: absolute;
+        top: 0;
+        right: 3px;
+        font-weight: 800;
+        color: #2785ff;
+      }
+    }
+
+    .pagination-next-btn {
+      &:after {
+        content: ">>";
+        position: absolute;
+        top: 0;
+        left: 3px;
+        font-weight: 800;
+        color: #2785ff;
+      }
+    }
+
+    .pagination-break-link {
+      list-type: none;
+      color:  #2785ff;
+    }
   }
 }
