--- a/src/app/js/components/Blog/Post/Post.scss
+++ b/src/app/js/components/Blog/Post/Post.scss
@@ -1,15 +1,17 @@
 .post {
-  min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px;
   font-size: 14px;
 
-  &__container {}
+  &__container {
+    min-height: 140vh;
+  }
 
   &__content {
-    min-height: 200px;
+    min-height: 140vh;
     border: none;
   }
 }
