--- a/src/app/js/components/Blog/Editor/Editor.scss
+++ b/src/app/js/components/Blog/Editor/Editor.scss
@@ -8,6 +8,12 @@
   &__wrapper {
     margin: 30px 0 30px;
     width: 60vw;
+
+    @media screen and (max-width: 960px) {
+      & {
+        width: 90vw;
+      }
+    }
   }
 
   &__container {
@@ -46,6 +52,16 @@
 
   &__btn-group {
     margin-top: 5px;
+
+    .input {
+      min-width: 60%;
+
+      @media screen and (max-width: 960px) {
+        & {
+          min-width: 100%;
+        }
+      }
+    }
   }
 
   &__upload {
@@ -62,5 +78,11 @@
   &__add-youtube {
     margin-top: 10px;
     width: 60%;
+
+    @media screen and (max-width: 960px) {
+      & {
+        min-width: 100%;
+      }
+    }
   }
 }
