--- a/src/app/style/base.scss
+++ b/src/app/style/base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 
 * {
   box-sizing: border-box;
@@ -51,6 +51,7 @@ code {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+
 }
 
 .height33 {
