--- a/src/app/js/components/Blog/Editor/Editor.scss
+++ b/src/app/js/components/Blog/Editor/Editor.scss
@@ -44,6 +44,14 @@
     border-radius: 3px;
   }
 
+  .editor-hash-tags {
+    margin-right: 10px;
+  }
+
+  &__input-group {
+    display: flex;
+  }
+
   .editor-preview {
     width: 100%;
     height: 60px;
@@ -76,7 +84,7 @@
   }
 
   &__add-youtube {
-    margin-top: 10px;
+    margin: 10px 0;
     width: 60%;
 
     @media screen and (max-width: 960px) {
@@ -84,5 +92,18 @@
         min-width: 100%;
       }
     }
+  }
+
+  &__hash-tag-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__hash-tag {
+    display: flex;
+    align-items: center;
+    padding: 4px;
+    border: 1px solid #000;
+    border-radius: 4px;
   }
 }
