--- a/src/app/js/components/Blog/Post/Post.scss
+++ b/src/app/js/components/Blog/Post/Post.scss
@@ -1,5 +1,4 @@
 .post {
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +6,22 @@
   font-size: 14px;
 
   &__container {
+    display: flex;
+    flex-direction: column;
     min-height: 140vh;
+    border: 1px solid #d7d7d7;
+    border-radius: 5px;
+    box-shadow: 0 0 8px #d7d7d7;
+  }
+
+  &__title, &__image, &__video, &__sub-title{
+    align-self: center;
+  }
+
+  &__sub-title {
+    align-self: center;
+    font-weight: 600;
+    color: #8b8b8b;
   }
 
   &__content {
