--- a/src/app/js/components/Blog/Post/Post.scss
+++ b/src/app/js/components/Blog/Post/Post.scss
@@ -18,6 +18,10 @@
     align-self: center;
   }
 
+  &__image {
+    margin-bottom: 10px;
+  }
+
   &__sub-title {
     align-self: center;
     font-weight: 600;
