fixed images sizes, maybe now it works

--- a/src/app/js/components/Blog/Post/Post.scss
+++ b/src/app/js/components/Blog/Post/Post.scss
@@ -38,7 +38,7 @@
 
     figure img {
       display: block;
-      width: 100% !important;
+      max-width: 100% !important;
       height: auto !important;
     }
   }
