some video support

--- a/src/app/js/components/Blog/Post/Post.scss
+++ b/src/app/js/components/Blog/Post/Post.scss
@@ -33,13 +33,17 @@
     border: none;
 
     figure {
-      max-width: 100% !important;
+      max-width: 100%;
     }
 
     figure img {
       display: block;
-      max-width: 100% !important;
+      max-width: 100%;
       height: auto !important;
+    }
+
+    iframe {
+      max-width: 100%;
     }
   }
 
