--- a/src/app/js/components/Blog/index.scss
+++ b/src/app/js/components/Blog/index.scss
@@ -14,6 +14,10 @@
     flex-grow: 1;
   }
 
+  &__loading {
+    min-height: calc(100vh - 56px - 333px);
+  }
+
   &__pagination {
     display: flex;
     align-items: center;
